src/pages/process/style.css
/* ... */
#four-methods .quarter .desc {
    width: 60%;
    /* text vertical align */
    align-content: center;
}
#four-methods .desc .subheader {
    font-weight: bold;
    margin-bottom: 20px;
}



#organization-gap {
    /* top/bottom, left/right */
    padding: 75px 100px;
}
#organization-gap .header {}
/* container */
#organization-gap .fig-container {
    width: var(--graph-width);
    aspect-ratio: 2720 / 1198;
    --base-width: var(--graph-bw);
}
#organization-gap .fig-container .fig-img {
    width: var(--graph-width);
}
#organization-gap .fig-container .part {
    /* text vertical align */
    align-content: center;
}
/* parts */
#organization-gap .fig-container .top {
    transform: translate(-50%, -50%);
    top: 23%;
    left: 50%;
    width: 17%;
    height: 10%;
    font-weight: bold;
}
#organization-gap .fig-container .center {
    transform: translate(-50%, -50%);
    bottom: 20%;
    left: 50%;
    width: 20%;
    height: 20%;
    font-weight: bold;
}
#organization-gap .fig-container .left {
    transform: translate(-50%, -50%);
    bottom: 20%;
    left: 24%;
    width: 20%;
    height: 20%;
    color: white;
}
#organization-gap .fig-container .right {
    transform: translate(-50%, -50%);
    bottom: 20%;
    left: 76%;
    width: 20%;
    height: 20%;
    color: white;
}
#organization-gap .fig-container .bot {
    transform: translateX(-50%);
    bottom: 0%;
    left: 50%;
    width: 70%;
    height: 13%;
}



#defining-value {
    /* top/bottom, left/right */
    padding: 75px 100px;
}
#defining-value .header {}
#defining-value .sides {
    display: flex;
    justify-content: center;
}
#defining-value .side {
    display: flex;
    flex-direction: column;
}
#defining-value .internal {
    border-right: 1px solid var(--light-gray);
    padding-right: 10px;
}
#defining-value .external {
    border-left: 1px solid var(--light-gray);
    padding-left: 10px;
}
#defining-value .subheader {
    text-align: center;
    font-weight: bold;
}
#defining-value .subcontent {
    display: flex;
}
#defining-value .subcontent .val-img {
    object-fit: contain;
    height: 250px;
}
#defining-value .subcontent .subtext {
    padding: 10px;
    font-size: 20px;
}
#defining-value .extra {
    margin-top: 20px;
    /* top, right, bottom, left */
    padding: 20px 20px 20px 20px;
    border: 2px solid rgb(194, 171, 150);
    border-radius: 6px;
}



#ROI {
    /* top/bottom, left/right */
    padding: 75px 100px;
}
#ROI .header {}
/* container */
#ROI .fig-container {
    width: var(--pyramid-width);
    aspect-ratio: 2704 / 1244;
    --base-width: var(--pyramid-bw);
}
#ROI .fig-container .fig-img {
    width: var(--pyramid-width);
}
#ROI .fig-container .part {
    /* text vertical align */
    align-content: center;
}
/* parts */
#ROI .fig-container .l1 {
    transform: translateX(-50%);
    bottom: 8%;
    left: 49.5%;
    width: 45%;
    height: 10%;
}
#ROI .fig-container .l2 {
    transform: translateX(-50%);
    bottom: 28.5%;
    left: 49.5%;
    width: 32%;
    height: 10%;
}
#ROI .fig-container .l3 {
    transform: translateX(-50%);
    top: 41.5%;
    left: 49.5%;
    width: 29%;
    height: 10%;
}
#ROI .fig-container .l4 {
    transform: translateX(-50%);
    top: 15%;
    left: 49.5%;
    width: 19%;
    height: 20%;
    font-size: calc(20 * 100cqw / var(--base-width));
}
#ROI .fig-container .out {
    transform: translate(-50%, -50%);
    top: 25%;
    right: -7%;
    width: 22%;
    height: 25%;
}



#bal-val-grow {
    /* top/bottom, left/right */
    padding: 75px 100px;
}
#bal-val-grow .header {}
/* container */
#bal-val-grow .fig-container {
    width: var(--scale-width);
    aspect-ratio: 2594 / 1186;
    --base-width: var(--scale-bw);
}
#bal-val-grow .fig-container .fig-img {
    width: var(--scale-width);
}
#bal-val-grow .fig-container .part {
    /* text vertical align */
    align-content: center;
}
/* parts */
#bal-val-grow .fig-container .left-top {
    transform: translateX(-50%);
    top: 5%;
    left: 20%;
    width: 30%;
    height: 15%;
    font-size: calc(26 * 100cqw / var(--base-width));
    font-weight: bold;
}
#bal-val-grow .fig-container .left-mid {
    transform: translateX(-50%);
    top: 35%;
    left: 20%;
    width: 20%;
    height: 30%;
}
#bal-val-grow .fig-container .right-top {
    transform: translateX(-50%);
    top: 5%;
    right: -10%;
    width: 30%;
    height: 15%;
    font-size: calc(26 * 100cqw / var(--base-width));
    font-weight: bold;
}
#bal-val-grow .fig-container .right-mid {
    transform: translateX(-50%);
    top: 35%;
    right: 0%;
    width: 20%;
    height: 30%;
}
#bal-val-grow .fig-container .bot {
    transform: translateX(-50%);
    bottom: 0%;
    left: 50%;
    width: 75%;
    height: 15%;
}



#board-role {
    /* top/bottom, left/right */
    padding: 75px 100px;
}
#board-role .header {}
/* container */
#board-role .fig-container {
    width: var(--columns-width);
    aspect-ratio: 2528 / 1214;
    /* text horizontal alignment */
    text-align: left;
    --base-width: var(--columns-bw);
}
#board-role .fig-container .fig-img {
    width: var(--columns-width);
}
#board-role .fig-container .part {
    /* text vertical align */
    /* align-content: center; */
}
/* parts */
#board-role .fig-container .left {
    transform: translateX(-50%);
    top: 20%;
    left: 24%;
    width: 20%;
    height: 50%;
}
#board-role .fig-container .mid {
    transform: translateX(-50%);
    top: 20%;
    right: 23%;
    width: 20%;
    height: 50%;
}
#board-role .fig-container .right {
    transform: translateX(-50%);
    top: 20%;
    right: -7%;
    width: 20%;
    height: 50%;
}
#board-role .fig-container .bot {
    transform: translateX(-50%);
    bottom: 1%;
    left: 50%;
    width: 80%;
    height: 15%;
    /* text horizontal alignment */
    text-align: center;
    /* text vertical align */
    align-content: center;
}
/* ... */

